--- a/precios/templates/base.html
+++ b/precios/templates/base.html
@@ -56,7 +56,7 @@ License: For each use you must have a valid license purchased only from above li
 					<!--begin::Logo-->
 					<div class="aside-logo flex-column-auto pt-10 pt-lg-20" id="kt_aside_logo">
 						<a href="../../">
-							<img alt="Logo" src="{% static 'assets/media/logos/makro-logo-vector.png' %}" class="h-30px" />
+							<img alt="Logo" src="{% static 'assets/media/logos/logo.png' %}" class="h-30px" />
 						</a>
 					</div>
 					<!--end::Logo-->
@@ -168,7 +168,7 @@ License: For each use you must have a valid license purchased only from above li
 							<!--begin::Mobile logo-->
 							<div class="d-flex align-items-center flex-grow-1 flex-lg-grow-0">
 								<a href="../../">
-									<img alt="Logo" src="{% static 'assets/media/logos/makro-logo-vector.png' class='h-35px' %}" />
+									<img alt="Logo" src="{% static 'assets/media/logos/logo.png' class='h-35px' %}" />
 								</a>
 							</div>
 							<!--end::Mobile logo-->
@@ -378,7 +378,7 @@ License: For each use you must have a valid license purchased only from above li
 													<!--begin::Username-->
 													<div class="d-flex flex-column">
 														<div class="fw-bold d-flex align-items-center fs-5">{{ user.username }}
-														<span class="badge badge-light-success fw-bold fs-8 px-2 py-1 ms-2">{{ user.sucursal.nombre }}</span></div>
+														<span class="badge badge-light-success fw-bold fs-8 px-2 py-1 ms-2">{{ user.sucursal_id }}</span></div>
 														<a href="#" class="fw-semibold text-muted text-hover-primary fs-7">{{ user.first_name }} {{ user.last_name }}</a>
 													</div>
 													<!--end::Username-->
